# first-term

asm/: mul.asm  sub.asm
bigint/: big_integer.cpp  big_integer.h
bigint-optimized/: CMakeLists.txt  big_integer.cpp  big_integer.h  my_shared_pointer.cpp  my_shared_pointer.h  optimized_storage.cpp  optimized_storage.h  shared_vector.h
vector/: vector.h
